# imapfs

./: main.py  pyproject.toml
imapfs/: __init__.py  core.py
tests/: __init__.py  test_core.py
